--- a/Anatriksh/src/index.css
+++ b/Anatriksh/src/index.css
@@ -146,7 +146,10 @@ a,
 .form-check-group label {
     color: var(--color-text-secondary);
 }
-
+.form-check-input:checked {
+    background-color: var(--color-primary);
+    border-color: var(--color-primary);
+}
 /* ----------------------------------
    BUTTONS
 ---------------------------------- */
